--- a/index.html
+++ b/index.html
@@ -13,147 +13,169 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <title>Document</title>
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css">
+    <link rel="stylesheet" href="./styles.css">
 </head>
 
 <body>
     <!-- Header Section -->
     <header class="header-section">
-        <nav>
-            <a class="logo-link link" href="./index.html">Web<span class="studio-dark">Studio</span></a>
-            <ul class="list">
-                <li class="header-item">
-                    <a class="links link" href="./index.html">Studio</a>
-                </li>
-                <li class="header-item">
-                    <a class="links link" href="./portfolio.html">Portfolio</a>
-                </li>
-                <li class="header-item">
-                    <a class="links link" href="">Contacts</a>
-                </li>
-            </ul>
-        </nav>
-        <address class="address">
-            <ul class="list">
-                <li>
-                    <a class="contacts link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-                </li>
-                <li>
-                    <a class="contacts link" href="tel:+110001111111">+11 (000) 111-11-11</a>
-                </li>
-            </ul>
-        </address>
+        <div class="header-container container">
+            <nav class="header-nav">
+                <a class="logo-link link" href="./index.html">Web<span class="studio-dark">Studio</span></a>
+                <ul class="header-list list">
+                    <li class="header-item">
+                        <a class="links link" href="./index.html">Studio</a>
+                    </li>
+                    <li class="header-item">
+                        <a class="links link" href="./portfolio.html">Portfolio</a>
+                    </li>
+                    <li class="header-item">
+                        <a class="links link" href="">Contacts</a>
+                    </li>
+                </ul>
+            </nav>
+            <!-- Address Section -->
+            <address class="address">
+                <ul class="address-list list">
+                    <li>
+                        <a class="contacts link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    </li>
+                    <li>
+                        <a class="contacts link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+                    </li>
+                </ul>
+            </address>
+        </div>
     </header>
     <main>
         <!-- Section 1 -->
         <section class="hero-section">
-            <h1 class="hero-title">
-                Effective Solutions
-                for Your Business
-            </h1>
-            <button class="button-hero" type="button">Order Service</button>
+            <div class="container">
+                <h1 class="hero-title">
+                    Effective Solutions
+                    for Your Business
+                </h1>
+                <button class="button-hero" type="button">Order Service</button>
+            </div>
         </section>
         <!-- Section 2 -->
-        <section>
-            <h2 class="img-title" hidden>Advantages</h2>
-            <ul class="list">
-                <li>
-                    <h3 class="title">
-                        Strategy
-                    </h3>
-                    <p class="text">
-                        Our goal is to identify the business
-                        problem to walk away with the perfect and creative solution.
-                    </p>
-                </li>
-                <li>
-                    <h3 class="title">
-                        Punctuality
-                    </h3>
-                    <p class="text">
-                        Bring the key message to the brand's audience for the best price within the shortest possible
-                        time.
-                    </p>
-                </li>
-                <li>
-                    <h3 class="title">
-                        Diligence
-                    </h3>
-                    <p class="text">
-                        Research and confirm brands that present the strongest digital growth opportunities and minimize
-                        risk.
-                    </p>
-                </li>
-                <li>
-                    <h3 class="title">
-                        Technologies
-                    </h3>
-                    <p class="text">
-                        Design practice focused on digital experiences. We bring forth a deep passion for
-                        problem-solving.
-                    </p>
-                </li>
-            </ul>
+        <section class="section">
+            <div class="advantages-container container">
+                <h2 class="visually-hidden" hidden>Advantages</h2>
+                <ul class="adv-list ">
+                    <li class="li-item">
+                        <h3 class="title">
+                            Strategy
+                        </h3>
+                        <p class="text">
+                            Our goal is to identify the business
+                            problem to walk away with the perfect and creative solution.
+                        </p>
+                    </li>
+                    <li class="li-item">
+                        <h3 class="title">
+                            Punctuality
+                        </h3>
+                        <p class="text">
+                            Bring the key message to the brand's audience for the best price within the shortest
+                            possible time.
+                        </p>
+                    </li>
+                    <li class="li-item">
+                        <h3 class="title">
+                            Diligence
+                        </h3>
+                        <p class="text">
+                            Research and confirm brands that present the strongest digital growth opportunities and
+                            minimize risk.
+                        </p>
+                    </li>
+                    <li class="li-item">
+                        <h3 class="title">
+                            Technologies
+                        </h3>
+                        <p class="text">
+                            Design practice focused on digital experiences. We bring forth a deep passion for
+                            problem-solving.
+                        </p>
+                    </li>
+                </ul>
+            </div>
         </section>
         <!-- Section 3 -->
-        <section>
-            <h2 class="img-title">What are we doing</h2>
-            <ul class="list">
-                <li>
-                    <img class="img1" src="./images/Rectang.jpg" alt="computer" width="360">
-                </li>
-                <li>
-                    <img class="img2" src="./images/Rectangle.jpg" alt="phone1" width="360">
-                </li>
-                <li>
-                    <img class="img3" src="./images/Rectangl.jpg" alt="phone2" width="360">
-                </li>
-            </ul>
+        <section class="section section-wawd">
+            <div class="container">
+                <h2 class="img-title">What are we doing</h2>
+                <ul class="img-list">
+                    <li class="wawd-item">
+                        <img class="img1" src="./images/Rectangee.jpg" alt="computer" width="360" />
+                    </li>
+                    <li class="wawd-item">
+                        <img class="img2" src="./images/Rectangle.jpg" alt="phone1" width="360" />
+                    </li>
+                    <li class="wawd-item">
+                        <img class="img3" src="./images/Rectangl.jpg" alt="phone2" width="360" />
+                    </li>
+                </ul>
+            </div>
         </section>
         <!-- Section 4 -->
-        <section class="staff-section">
-            <h2 class="img-title">Our Team</h2>
-            <ul class="list">
-                <li class="staff-item">
-                    <a><img src="./images/img.jpg" alt="Mark Guerrero" width="264" height="260">
-                    </a>
-                    <h3 class="title">Mark Guerrero</h3>
-                    <p class="text">
-                        Product Designer
-                    </p>
-                </li>
-                <li class="staff-item">
-                    <a><img src="./images/im.jpg" alt="Tom Ford" width="264" height="260">
-                    </a>
-                    <h3 class="title">Tom Ford</h3>
-                    <p class="text">
-                        Frontend Developer
-                    </p>
-                </li>
-                <li class="staff-item">
-                    <a><img src="./images/imd.jpg" alt="Camila Garcia" width="264" height="260">
-                    </a>
-                    <h3 class="title">Camila Garcia</h3>
-                    <p class="text">
-                        Marketing
-                    </p>
-                </li>
-                <li class="staff-item">
-                    <a><img src="./images/imw.jpg" alt="Daniel Wilson" width="264" height="260">
-                    </a>
-                    <h3 class="title">Daniel Wilson</h3>
-                    <p class="text">
-                        UI Designer
-                    </p>
-                </li>
-            </ul>
+        <section class="staff-section section">
+            <div class="container">
+                <h2 class="img-title">Our Team</h2>
+                <ul class="team-list">
+                    <li class="staff-item">
+                        <a><img src="./images/img.jpg" alt="Mark Guerrero" width="264" height="260" />
+                        </a>
+                        <div class="team-container">
+                            <h3 class="title">Mark Guerrero</h3>
+                            <p class="text">
+                                Product Designer
+                            </p>
+                        </div>
+                    </li>
+                    <li class="staff-item">
+                        <a><img src="./images/im.jpg" alt="Tom Ford" width="264" height="260" />
+                        </a>
+                        <div class="team-container">
+                            <h3 class="title">Tom Ford</h3>
+                            <p class="text">
+                                Frontend Developer
+                            </p>
+                        </div>
+                    </li>
+                    <li class="staff-item">
+                        <a><img src="./images/imd.jpg" alt="Camila Garcia" width="264" height="260" />
+                        </a>
+                        <div class="team-container">
+                            <h3 class="title">Camila Garcia</h3>
+                            <p class="text">
+                                Marketing
+                            </p>
+                        </div>
+                    </li>
+                    <li class="staff-item">
+                        <a><img src="./images/imw.jpg" alt="Daniel Wilson" width="264" height="260" />
+                        </a>
+                        <div class="team-container">
+                            <h3 class="title">Daniel Wilson</h3>
+                            <p class="text">
+                                UI Designer
+                            </p>
+                        </div>
+                    </li>
+                </ul>
+            </div>
         </section>
     </main>
     <footer class="footer">
-        <a class="logo-link link" href="./index.html">Web<span class="studio-bright">Studio</span></a>
-        <p class="text">
-            Increase the flow of customers and sales for your business with digital marketing & growth solutions.
-        </p>
+        <div class="container">
+            <a class="footer-link link" href="./index.html">Web<span class="studio-bright">Studio</span></a>
+            <p class="footer-text">
+                Increase the flow of customers and sales for your business with digital marketing & growth solutions.
+            </p>
+        </div>
     </footer>
 </body>
 
