--- a/portfolio.html
+++ b/portfolio.html
@@ -13,140 +13,169 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <title>Document</title>
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
     <!-- Header Section -->
     <header class="header-section">
-        <nav>
-            <a class="logo-link link" href="./index.html">Web<span class="studio-dark">Studio</span></a>
-            <ul class="list">
-                <li class="header-item">
-                    <a class="links link" href="./index.html">Studio</a>
-                </li>
-                <li class="header-item">
-                    <a class="links link" href="./portfolio.html">Portfolio</a>
-                </li>
-                <li class="header-item">
-                    <a class="links link" href="">Contacts</a>
-                </li>
-            </ul>
-        </nav>
-        <!-- Address Section -->
-        <address class="address">
-            <ul class="list">
-                <li>
-                    <a class="contacts link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-                </li>
-                <li>
-                    <a class="contacts link" href="tel:+110001111111">+11 (000) 111-11-11</a>
-                </li>
-            </ul>
-        </address>
+        <div class="header-container container">
+            <nav class="header-nav">
+                <a class="logo-link link" href="./index.html">Web<span class="studio-dark">Studio</span></a>
+                <ul class="header-list list">
+                    <li class="header-item">
+                        <a class="links link" href="./index.html">Studio</a>
+                    </li>
+                    <li class="header-item">
+                        <a class="links link" href="./portfolio.html">Portfolio</a>
+                    </li>
+                    <li class="header-item">
+                        <a class="links link" href="">Contacts</a>
+                    </li>
+                </ul>
+            </nav>
+            <!-- Address Section -->
+            <address class="address">
+                <ul class="address-list list">
+                    <li>
+                        <a class="contacts link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    </li>
+                    <li>
+                        <a class="contacts link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+                    </li>
+                </ul>
+            </address>
+        </div>
     </header>
     <main>
-        <section>
-            <h1 hidden>Portfolio</h1>
-            <ul class="list">
-                <li>
-                    <button class="port-button" type="button">All</button>
-                </li>
-                <li>
-                    <button class="port-button" type="button">Web Site</button>
-                </li>
-                <li>
-                    <button class="port-button" type="button">App</button>
-                </li>
-                <li>
-                    <button class="port-button" type="button">Design</button>
-                </li>
-                <li>
-                    <button class="port-button" type="button">Marketing</button>
-                </li>
-            </ul>
-            <ul class="list">
-                <li>
-                    <a class="image link"><img src="./images/concept.jpg" alt="Banking App Interface Concept"
-                            width="360" />
-                        <h2 class="title">Banking App Interface Concept</h2>
-                        <p class="text">
-                            App
-                        </p>
-                    </a>
-                </li>
-                <li>
-                    <a class="image link"><img src="./images/payment.jpg" alt="Cashless Payment" width="360">
-                        <h2 class="title">Cashless Payment</h2>
-                        <p class="text">
-                            Marketing
-                        </p>
-                    </a>
-                </li>
-                <li>
-                    <a class="image link"><img src="./images/app.jpg" alt="Meditation App" width="360">
-                        <h2 class="title">Meditation App</h2>
-                        <p class="text">
-                            App
-                        </p>
-                    </a>
-                </li>
-                <li>
-                    <a class="image link">
-                        <img src="./images/taxi.jpg" alt="Taxi" width="360">
-                        <h2 class="title">Taxi Service</h2>
-                        <p class="text">
-                            Marketing
-                        </p>
-                    </a>
-                </li>
-                <li>
-                    <a class="image link"><img src="./images/screen.jpg" alt="Illustration" width="360">
-                        <h2 class="title">Screen Illustrations</h2>
-                        <p class="text">
-                            Design
-                        </p>
-                    </a>
-                </li>
-                <li>
-                    <a class="image link"><img src="./images/courses.jpg" alt="OnlineCourse" width="360">
-                        <h2 class="title">Online Courses</h2>
-                        <p class="text">
-                            Marketing
-                        </p>
-                    </a>
-                </li>
-                <li>
-                    <a class="image link"><img src="./images/instagram.jpg" alt="InstaConcept" width="360">
-                        <h2 class="title">Instagram Stories Concept</h2>
-                        <p class="text">
-                            Design
-                        </p>
-                    </a>
-                </li>
-                <li>
-                    <a class="image link"><img src="./images/food.jpg" alt="OrgFood" width="360">
-                        <h2 class="title">Organic Food</h2>
-                        <p class="text">
-                            Web Site
-                        </p>
-                    </a>
-                </li>
-                <li>
-                    <a class="image link"><img src="./images/coffe.jpg" alt="Coffee" width="360">
-                        <h2 class="title">Fresh Coffee</h2>
-                        <p class="text">
-                            Web Site
-                        </p>
-                    </a>
-                </li>
-            </ul>
+        <section class="portfolio">
+            <div class="container">
+                <h1 class="visually-hidden" hidden>Portfolio</h1>
+                <ul class="but-list">
+                    <li>
+                        <button type="button" class="port-button">All</button>
+                    </li>
+                    <li>
+                        <button type="button" class="port-button">Web Site</button>
+                    </li>
+                    <li>
+                        <button type="button" class="port-button">App</button>
+                    </li>
+                    <li>
+                        <button type="button" class="port-button">Design</button>
+                    </li>
+                    <li>
+                        <button type="button" class="port-button">Marketing</button>
+                    </li>
+                </ul>
+                <ul class="all-list">
+                    <li class="all-item">
+                        <a class="image-link"><img class="img-all" src="./images/concept.jpg"
+                                alt="Banking App Interface Concept" width="360" />
+                            <div class="all-container">
+                                <h2 class="title">Banking App Interface Concept</h2>
+                                <p class="text">
+                                    App
+                                </p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="all-item">
+                        <a class="image-link"><img class="img-all" src="./images/payment.jpg" alt="Cashless Payment"
+                                width="360" />
+                            <div class="all-container">
+                                <h2 class="title">Cashless Payment</h2>
+                                <p class="text">
+                                    Marketing
+                                </p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="all-item">
+                        <a class="image-link"><img class="img-all" src="./images/app.jpg" alt="Meditation App"
+                                width="360" />
+                            <div class="all-container">
+                                <h2 class="title">Meditation App</h2>
+                                <p class="text">
+                                    App
+                                </p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="all-item">
+                        <a class="image-link"><img class="img-all" src="./images/taxi.jpg" alt="Taxi" width="360" />
+                            <div class="all-container">
+                                <h2 class="title">Taxi Service</h2>
+                                <p class="text">
+                                    Marketing
+                                </p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="all-item">
+                        <a class="image-link"><img class="img-all" src="./images/screen.jpg" alt="Illustration"
+                                width="360" />
+                            <div class="all-container">
+                                <h2 class="title">Screen Illustrations</h2>
+                                <p class="text">
+                                    Design
+                                </p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="all-item">
+                        <a class="image-link"><img class="img-all" src="./images/courses.jpg" alt="OnlineCourse"
+                                width="360" />
+                            <div class="all-container">
+                                <h2 class="title">Online Courses</h2>
+                                <p class="text">
+                                    Marketing
+                                </p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="all-item">
+                        <a class="image-link"><img class="img-all" src="./images/instagram.jpg" alt="InstaConcept"
+                                width="360" />
+                            <div class="all-container">
+                                <h2 class="title">Instagram Stories Concept</h2>
+                                <p class="text">
+                                    Design
+                                </p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="all-item">
+                        <a class="image-link"><img class="img-all" src="./images/food.jpg" alt="OrgFood" width="360" />
+                            <div class="all-container">
+                                <h2 class="title">Organic Food</h2>
+                                <p class="text">
+                                    Web Site
+                                </p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="all-item">
+                        <a class="image-link"><img class="img-all" src="./images/coffe.jpg" alt="Coffee" width="360" />
+                            <div class="all-container">
+                                <h2 class="title">Fresh Coffee</h2>
+                                <p class="text">
+                                    Web Site
+                                </p>
+                            </div>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </section>
     </main>
     <footer class="footer">
-        <a class="logo-link link" href="./index.html">Web<span class="studio-bright">Studio</span></a>
-        <p class="text">
-            Increase the flow of customers and sales for your business with digital marketing & growth solutions.
-        </p>
+        <div class="container">
+            <a class="footer-link link" href="./index.html">Web<span class="studio-bright">Studio</span></a>
+            <p class="footer-text">
+                Increase the flow of customers and sales for your business with digital marketing & growth solutions.
+            </p>
+        </div>
     </footer>
 </body>
